# websocket_image_classification

./: .gitignore  README.md  docker-compose.yml
backend/: .gitignore  config.py  config.yml  pyproject.toml  requirements.txt
backend/api/: main.py
backend/core/: api_core.py  img_classifier.py
backend/messaging/: __init__.py  rabbitmq.py
backend/models/: heroes_class_indices.json  model.py  train.py
frontend/: index.html  index.js  package-lock.json  package.json
frontend/css/: style.css
frontend/public/: config.json
frontend/public/images_ext_storage_mock/_quotes/: batman.txt  cota.txt  hulk.txt  iron man.txt  spiderman.txt  superman.txt
